Update About me

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div id="about">
         <h1 class="title title-font">About me</h1>
         <div class="wrapper">
-          <p>During 2014-2017 I worked as a lawyer. Being dissatisfied with the  lawyer career, I decided to return to what I really liked to do in highschool, programming.</p>
+          <p>After a detour on practicing Law, I've decided to follow my childhood dream of being a developer.</p>
           <p>And so my journey of self learning began. I followed the Treehouse Front-End Development Track online courses and then I applied and graduated in Android Nanodegree Basics by Google at Udacity in July 2017. Since then I also learned some Node.js and Express.</p>
         </div> <!--.wrapper-->
       </div> <!--#about-->
