--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
           <div class="contact-info">
             <img src="assets/img/mail_outline.svg" alt="mail" class="icon" />
-            <p><a href="mailto:l90vegeta@gmail.com">l90vegeta@gmail.com</a></p>
+            <p><a href="mailto:lari.popescu.90@gmail.com">lari.popescu.90@gmail.com</a></p>
           </div>
 
           <div class="contact-info">
