--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <li><span class="oi oi-caret-right" title="caret right" aria-hidden="true"></span>Gulp</li>
             <li><span class="oi oi-caret-right" title="caret right" aria-hidden="true"></span>npm</li>
             <li><span class="oi oi-caret-right" title="caret right" aria-hidden="true"></span>Bootstrap 4</li>
-            <li><span class="oi oi-caret-right" title="caret right" aria-hidden="true"></span>Express</li>
+            <li><span class="oi oi-caret-right" title="caret right" aria-hidden="true"></span>React</li>
             <li><span class="oi oi-caret-right" title="caret right" aria-hidden="true"></span>Sass</li>
             <li><span class="oi oi-caret-right" title="caret right" aria-hidden="true"></span>Java</li>
             <li><span class="oi oi-caret-right" title="caret right" aria-hidden="true"></span>Android</li>
