Changed about section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h1 class="title title-font">About me</h1>
         <div class="wrapper">
           <p>After a detour on practicing Law, I've decided to follow my childhood dream of being a developer.</p>
-          <p>And so my journey of self learning began. I followed the Treehouse Front-End Development Track online courses and then I applied and graduated in Android Nanodegree Basics by Google at Udacity in July 2017. Since then I also learned some Node.js and Express.</p>
+          <p>And so my journey of self learning began. I followed the Treehouse Front-End Development Track online courses and then I applied and graduated in Android Nanodegree Basics by Google at Udacity in July 2017. In February 2018 I qualified for a Google Developer Mobile Web Specialist Scholarship, which I am currently following.</p>
         </div> <!--.wrapper-->
       </div> <!--#about-->
 
