--- a/index.html
+++ b/index.html
@@ -59,122 +59,15 @@
       <div id="about">
         <h1 class="title title-font">About me</h1>
         <div class="wrapper">
-          <p>After a detour on practicing Law, I've decided to follow my childhood dream of being a developer.</p>
-          <p>And so my journey of self learning began. I followed the Treehouse Front-End Development Track online courses and then I applied and graduated in Android Nanodegree Basics by Google at Udacity in July 2017. In February 2018 I qualified for a Google Developer Mobile Web Specialist Scholarship, which I am currently following.</p>
+          <p>After a detour on practicing Law, I've decided to follow my dream of being a developer.</p>
+          <p>I followed the Treehouse Front-End Development Track online courses and then I applied and graduated in Android Nanodegree Basics by Google at Udacity in July 2017. In May 2018 I got my first job as a Junior Front-End Developer.</p>
         </div> <!--.wrapper-->
       </div> <!--#about-->
 
       <div id="projects">
         <h1 class="title title-font">Projects</h1>
         <div class="wrapper">
-          <p>I've done all my projects within the Android Nanodegree Basics at Udacity. If you want to see all the projects and their source code, you can check out my <a href="https://github.com/Lariveg?tab=repositories" target='blank'>github</a> profile.</p>
-          <div class="projects-details">
-
-            <div class="projects-description">
-              <h1>LoL Score Tracker</h1>
-              <p>The project is about creating a Score Keeper App. My LoL Score Tracker is inspired from the League of Legends game. In the app, you have different kind of scores you keep track of, and when the nexus button is pressed, that team wins. When one of the team wins, then the main layout disappears and a victory message appears on the screen. If you press reset, the app resets from the initial state.</p>
-            </div>
-
-            <div class='carouselWrapper'>
-              <div id="carouselControls1" class="carousel slide" data-ride="carousel">
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img class="d-block w-100" src="assets/img/LOL-score-tracker-1.png" alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100" src="assets/img/LOL-score-tracker-2.png" alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100" src="assets/img/LOL-score-tracker-3.png" alt="Third slide">
-                    </div>
-                  </div>
-                  <a class="carousel-control-prev" href="#carouselControls1" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="carousel-control-next" href="#carouselControls1" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                  </a>
-              </div>
-            </div> <!--.carouselWrapper-->
-            <span class="clearfix"></span>
-
-          </div> <!--.projects-details-->
-
-          <div class="projects-details">
-
-            <div class="projects-description">
-              <h1>Quiz App</h1>
-              <p>The project is about creating a Quiz App. The questions are in a variety of formats such as free text response, checkboxes, and radio buttons. I made the quiz using CardView. When you finish the quiz there is a try again button, which resets the app in the initial state.</p>
-            </div>
-
-            <div class='carouselWrapper'>
-              <div id="carouselControls2" class="carousel slide" data-ride="carousel">
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img class="d-block w-100" src="assets/img/quiz-app-1.png" alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100" src="assets/img/quiz-app-2.png" alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100" src="assets/img/quiz-app-3.png" alt="Third slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100" src="assets/img/quiz-app-4.png" alt="Third slide">
-                    </div>
-                  </div>
-                  <a class="carousel-control-prev" href="#carouselControls2" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="carousel-control-next" href="#carouselControls2" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                  </a>
-              </div>
-            </div> <!--.carouselWrapper-->
-            <span class="clearfix"></span>
-
-          </div> <!--.projects-details-->
-
-          <div class="projects-details">
-
-            <div class="projects-description">
-              <h1>Bucharest Tour Guide</h1>
-              <p>The project is about making a Tour Guide app. This is an app with multiple screens, each of which lists a kind of attraction for a given city, national park, or historical monument.</p>
-            </div>
-
-            <div class='carouselWrapper'>
-              <div id="carouselControls3" class="carousel slide" data-ride="carousel">
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img class="d-block w-100" src="assets/img/Bucharest-tour-guide-parks.png" alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100" src="assets/img/Bucharest-tour-guide-museums.png" alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100" src="assets/img/Bucharest-tour-guide-food.png" alt="Third slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100" src="assets/img/Bucharest-tour-guide-diverse.png" alt="Third slide">
-                    </div>
-                  </div>
-                  <a class="carousel-control-prev" href="#carouselControls3" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="carousel-control-next" href="#carouselControls3" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                  </a>
-              </div>
-            </div> <!--.carouselWrapper-->
-            <span class="clearfix"></span>
-
-          </div> <!--.projects-details-->
+          <p>If you want to see some of the websites I developed, you can contact me. These are some projects I did within the Android Nanodegree Basics at Udacity. If you want to see all the projects and their source code, you can check out my <a href="https://github.com/Lariveg?tab=repositories" target='blank'>github</a> profile.</p>
 
           <div class="projects-details">
             <div class="projects-description">
@@ -209,7 +102,6 @@
               </div>
             </div> <!--.carouselWrapper-->
             <span class="clearfix"></span>
-
           </div> <!--.projects-details-->
 
           <div class="projects-details">
@@ -222,8 +114,8 @@
               <img class="d-block w-100" src='assets/img/news-app.png'>
             </div>
             <span class="clearfix"></span>
-
           </div> <!--.projects-details-->
+
           <span class="clearfix"></span>
         </div> 
 
@@ -244,9 +136,6 @@
             <li><span class="oi oi-caret-right" title="caret right" aria-hidden="true"></span>npm</li>
             <li><span class="oi oi-caret-right" title="caret right" aria-hidden="true"></span>Bootstrap 4</li>
             <li><span class="oi oi-caret-right" title="caret right" aria-hidden="true"></span>React</li>
-            <li><span class="oi oi-caret-right" title="caret right" aria-hidden="true"></span>Sass</li>
-            <li><span class="oi oi-caret-right" title="caret right" aria-hidden="true"></span>Java</li>
-            <li><span class="oi oi-caret-right" title="caret right" aria-hidden="true"></span>Android</li>
             <span class="clearfix"></span>
           </ul>
         </div> <!--.wrapper-->
