switched order of name

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <img class="profile-image" src="assets/img/profile.jpg">
         <div class="intro">
           <div class="intro-title">
-            <h1 class="title-font">Popescu Larisa</h1>
+            <h1 class="title-font">Larisa Popescu</h1>
             <h2 class="subtitle">Front-End Developer</h2>
           </div>
           <p>Hello, my name is Larisa. I am a Front-End Developer living in Leuven, Belgium.</p>
